--- a/CollegeScorecard/appsettings.json
+++ b/CollegeScorecard/appsettings.json
@@ -7,12 +7,14 @@
     }
   },
   "AllowedHosts": "*",
-  /*
+
   "ConnectionStrings": {
     "CollegeScorecardDbContext": "Server=(localdb)\\mssqllocaldb;Database=CollegeScorecard;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
-  */
+
+/*
   "ConnectionStrings": {
-    "CollegeScorecardDbContext": "Server=tcp:vdasuusfdbserver.database.windows.net,1433;Initial Catalog=CollegeScorecard_db;User Id=vdasuusf@vdasuusfdbserver;Password=MyDatabase01;Trusted_Connection=False;Encrypt=True;MultipleActiveResultSets=true;Integrated Security=False"
+    "CollegeScorecardDbContext": "Server=tcp:vdasuusfdbserver.database.windows.net,1433;Initial Catalog=CollegeScorecard_db;User Id=vdasuusf@vdasuusfdbserver;Password=;Trusted_Connection=False;Encrypt=True;MultipleActiveResultSets=true;Integrated Security=False"
   }
+  */
 }
